[package]
name = "advent2020"
version = "0.1.0"
authors = ["Andreas Liljeqvist <bonega@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="1.4.3"
lazy_static = "1.4.0"
petgraph = "0.5.1"
anyhow = "1.0.38"
